Change my main and make symmetry

--- a/Constraints/Base.lproj/Main.storyboard
+++ b/Constraints/Base.lproj/Main.storyboard
@@ -18,12 +18,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9aP-6P-1XZ">
-                                <rect key="frame" x="16" y="59" width="361" height="352"/>
+                                <rect key="frame" x="20" y="79" width="353" height="340"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Cv-NE-Rom">
-                                <rect key="frame" x="16" y="445" width="361" height="373"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9te-WS-nqe">
+                                <rect key="frame" x="20" y="458" width="353" height="340"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor"/>
                             </view>
