--- a/Constraints/Base.lproj/Main.storyboard
+++ b/Constraints/Base.lproj/Main.storyboard
@@ -18,12 +18,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9aP-6P-1XZ">
-                                <rect key="frame" x="20" y="79" width="390" height="394"/>
+                                <rect key="frame" x="20" y="79.000000000000028" width="390" height="389.66666666666674"/>
                                 <viewLayoutGuide key="safeArea" id="E7M-fK-lil"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                             </view>
                             <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9te-WS-nqe">
-                                <rect key="frame" x="20" y="493" width="390" height="394"/>
+                                <rect key="frame" x="20" y="488.66666666666674" width="390" height="389.33333333333326"/>
                                 <viewLayoutGuide key="safeArea" id="fwV-Wa-SYc"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor"/>
                             </view>
@@ -34,11 +34,9 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9te-WS-nqe" secondAttribute="bottom" constant="20" id="5nG-E6-BXJ"/>
                             <constraint firstItem="9te-WS-nqe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="7D4-pu-38p"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9aP-6P-1XZ" secondAttribute="trailing" constant="20" id="Ca3-gZ-e7G"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9aP-6P-1XZ" secondAttribute="bottom" constant="434" id="PRf-1M-OUR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9te-WS-nqe" secondAttribute="trailing" constant="20" id="XVC-Yn-BHk"/>
                             <constraint firstItem="9te-WS-nqe" firstAttribute="top" secondItem="9aP-6P-1XZ" secondAttribute="bottom" constant="20" id="czJ-lC-RJD"/>
                             <constraint firstItem="9aP-6P-1XZ" firstAttribute="height" secondItem="9te-WS-nqe" secondAttribute="height" id="hzv-h0-uuf"/>
-                            <constraint firstItem="9te-WS-nqe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="434" id="iGI-az-SmU"/>
                             <constraint firstItem="9aP-6P-1XZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="xXK-kK-DLA"/>
                             <constraint firstItem="9aP-6P-1XZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zAe-vQ-ber"/>
                         </constraints>
